--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 											<h1>Hi, I’m Ganesh
 												Rayavarapu</h1>
 											<p>Aspiring data scientist and software engineer interested in applying AI and ML in economics 
-												and physics domains </p>
+												and physics domain </p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 										<ul class="actions">
