--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
 									</form>
 								</section>
 
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Homepage</a></li>
+										<li><a href="generic.html">Generic</a></li>
+										<li><a href="elements.html">Elements</a></li>
+									</ul>
+								</nav>
+
 
 							<!-- Footer -->
 								<footer id="footer">
