--- a/experience.html
+++ b/experience.html
@@ -455,9 +455,10 @@ print 'It took ' + i + ' iterations to sort the deck.';
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">About</a></li>
+										<li><a href="portfolio.html">Portfolio</a></li>
+										<li><a href="experience.html">Experience</a></li>
+										<li><a href="contact.html">Contact</a></li>
 
 									</ul>
 								</nav>
