--- a/portfolio.html
+++ b/portfolio.html
@@ -84,9 +84,10 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">About</a></li>
+										<li><a href="portfolio.html">Portfolio</a></li>
+										<li><a href="experience.html">Experience</a></li>
+										<li><a href="contact.html">Contact</a></li>
 									</ul>
 								</nav>
 
