adding project content and image of me :)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="IMG_7887.jpg" alt="" />
+										<img src="images/IMG_7887.jpg" alt="Ganesh Rayavarapu" itemprop="image" class="u-photo"/>
 									</span>
 								</section>
 
