--- a/portfolio.html
+++ b/portfolio.html
@@ -38,17 +38,16 @@
 										<h1>My Project Portfolio</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
 									<hr class="major" />
 
 									<h2>Blockchain Project</h2>
 									<p>I recently completed my research position as a Blockchain Undergraduate Assistant. Due to my recent fascination with
-										blockchain and cryptocurrencies, I decided to try implementing a basic blockchain application with Python and Flask to 
-										understand how exactly blockchain works. I did use many tutorials and genAI tools to implement features and methods. In 
-										the end, I was able to make a basic web application that is deployable on a local server and can perform all of the basic 
-										features of blockchain (consensus algorithms, proof-of-work, hashing) through simple user interaction. I also gained some 
-										new habits along the way, like developing modular code and writing docstrings. 
+										blockchain and cryptocurrencies, I decided to try implementing a <a href="https://github.com/gan0412/Blockchain2"> basic blockchain application 
+										</a> with Python and Flask to understand how exactly blockchain works. I did use many tutorials and genAI tools to implement 
+										features and methods. In the end, I was able to make a basic web application that is deployable on a local server and can perform 
+										all of the basic features of blockchain (consensus algorithms, proof-of-work, hashing) through simple user interaction. I also 
+										gained some new habits along the way, like developing modular code and writing docstrings. 
 
 										Fun fact: I presented my application to two employers at a data analytics company, and they provided feedback that I 
 										incorporated accordingly. 
@@ -61,7 +60,8 @@
 										I decided to apply what I have learnt to Masterchef, a reality TV show I regularly watch. I wanted to predict the probability of previous 
 										contestants making the show for the current season, so I used logistic regression and gradient descent to construct my prediction model.
 										I used the ranks and previous seasons of contestants as data to train my model. I would not call it the most accurate model but I learned
-										a lot and had great fun with it. 
+										a lot and had great fun with it. I have my model posted on my <a href="https://github.com/gan0412/Masterchef_ML_Project"> Github </a> for 
+										reference. 
 									</p>
 
 								</section>
