fixing experience and contact

--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Experience</title>
+		<title>Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,47 +33,91 @@
 								</header>
 
 							<!-- Content -->
-								<section>
-									<header class="main">
+							<section>
+						<header class="main">
 										<h1>My Experience</h1>
-									</header>
+						</header>
 
-									<!-- Content -->
-										<h2 id="content">Cornell University – Undergraduate Blockchain Research Assistant | Ithaca, NY			   March 2024 – May 2024</h2>
-										<pre style="font-family:verdana">
-	•	Collaborated with a team of 2 to investigate how consensus protocols and modular architecture of IBM Hyperledger Fabric help the blockchain framework 
-	        surveil the consistency of product attributes and labor conditions across supply chains 
-	•	Programmed and deployed Hyperledger fabric smart contracts for 7+ hours per week on Visual Studio using Golang and Docker to promote the transparency of 
-	        cotton supply chains
-	•	Documented and coded 7 smart contract functions and 10 different cotton asset types to enable 6 stakeholders of the cotton supply chain to transfer assets between 
-	        stakeholders, convert asset types, change asset properties, and create new assets 
-										</pre>
+								<!-- Content -->
+									<h2 id="content">Cornell University – Undergraduate Blockchain Research Assistant | Ithaca, NY <br>	   
+									March 2024 – May 2024</h2>
+									<p style="margin-left:5%; color:black;">
+		•	Collaborated with a team of 2 to investigate how consensus protocols and modular architecture of IBM Hyperledger Fabric help the blockchain framework 
+				surveil the consistency of product attributes and labor conditions across supply chains 
+									<br> 
+		•	Programmed and deployed Hyperledger fabric smart contracts for 7+ hours per week on Visual Studio using Golang and Docker to promote the transparency of 
+				cotton supply chains
+									<br> 
+		•	Documented and coded 7 smart contract functions and 10 different cotton asset types to enable 6 stakeholders of the cotton supply chain to transfer assets between 
+				stakeholders, convert asset types, change asset properties, and create new assets 
+								  </p>
+
+									<h2 id="content">Extern – IgniteXL Remote Extern | Virtual<br>						       
+									May 2024 – July 2024	 </h2>
+									<!-- <pre style="font-family:verdana"> -->
+									<p style="margin-left:5%; color:black;">
+		•	Conducted in-depth research using platforms like Crunchbase and ZoomInfo to gather data and insights on the industry and performance of 50+ companies, such as 
+				compound annual growth rate, funding stages, and regulatory risks
+									<br>
+		•	Prompt-engineered AI tools like Perplexity and Anthropic to brainstorm 15 lead startups that IgniteXL can invest in
+									<br>
+		•	Presented a concise and impactful 4-page venture capital investment summary incorporating research insights and recommendations on Frame Fitness startup company 
+				to provide venture capital experts with a prospective investment   
+								  </p>
+
+									<h2 id="content">National Institute of Standards and Technology – SHIP Intern | Gaithersburg, MD<br>                                    
+									June 2022 – August 2022  </h2>
+									<p style="margin-left:5%; color:black;">
+		•	Updated atomic spectra databases for NIST (National Institute of Standards and Technology) for 7 hours daily by transferring 400+ pages of orbital data to 
+				computer-readable formats using Microsoft Excel and Adobe Spark
+									<br>
+		•	Maintained consistency of the data in the spreadsheets by formatting data tables and removing erroneous data entries, enabling them to be utilized for future NASA 
+				missions and other sponsored projects
+									<br>
+		•	Retrieved reference material for data compilers and presented the results to the NIST panel of 10 employers 
+									</p>
 									
-										<h2 id="content">Extern – IgniteXL Remote Extern | Virtual							       May 2024 – July 2024	 </h2>
-										<pre style="font-family:verdana">
-	•	Conducted in-depth research using platforms like Crunchbase and ZoomInfo to gather data and insights on the industry and performance of 50+ companies, such as 
-	        compound annual growth rate, funding stages, and regulatory risks
-	•	Prompt-engineered AI tools like Perplexity and Anthropic to brainstorm 15 lead startups that IgniteXL can invest in
-	•	Presented a concise and impactful 4-page venture capital investment summary incorporating research insights and recommendations on Frame Fitness startup company 
-	        to provide venture capital experts with a prospective investment   
-										</pre>
+									<h2 id="content">George Mason University – Data Science Intern | Fairfax, VA <br>	                            
+									June 2021 – February 2022 </h2>
+									<p style="margin-left:5%; color:black;">
+		•	Collaborated with a team of 3 members to analyze the correlations between certain keywords and fake websites by programming Python algorithms utilizing regular 
+				expressions and Word2Vec on article text to identify 300+ scams
+									<br>
+		•	Compiled data from 500+ COVID-19 scam websites via cross-referencing search engine reports, facilitated the training of supervised data science models, enhancing 
+				their accuracy in predicting the legitimacy of websites		
+									</p>
 
-										<h2 id="content">National Institute of Standards and Technology – SHIP Intern | Gaithersburg, MD                                    June 2022 – August 2022  </h2>
-										<pre style="font-family:verdana">
-	•	Updated atomic spectra databases for NIST (National Institute of Standards and Technology) for 7 hours daily by transferring 400+ pages of orbital data to 
-	        computer-readable formats using Microsoft Excel and Adobe Spark
-	•	Maintained consistency of the data in the spreadsheets by formatting data tables and removing erroneous data entries, enabling them to be utilized for future NASA 
-	        missions and other sponsored projects
-	•	Retrieved reference material for data compilers and presented the results to the NIST panel of 10 employers 
-										</pre>
-										
-										<h2 id="content">George Mason University – Data Science Research Assistant Intern | Fairfax, VA	                            June 2021 – February 2022       </h2>
-										<pre style="font-family:verdana">
-	•	Collaborated with a team of 3 members to analyze the correlations between certain keywords and fake websites by programming Python algorithms utilizing regular 
-	        expressions and Word2Vec on article text to identify 300+ scams
-	•	Compiled data from 500+ COVID-19 scam websites via cross-referencing search engine reports, facilitated the training of supervised data science models, enhancing 
-	        their accuracy in predicting the legitimacy of websites		
-										</pre>
+
+						</div>
+					</div>
+
+				<!-- Sidebar -->
+					<div id="sidebar">
+						<div class="inner">
+
+							<!-- Search -->
+								<section id="search" class="alt">
+									<form method="post" action="#">
+										<input type="text" name="query" id="query" placeholder="Search" />
+									</form>
+								</section>
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">About</a></li>
+										<li><a href="portfolio.html">Portfolio</a></li>
+										<li><a href="experience.html">Experience</a></li>
+										<li><a href="contact.html">Contact</a></li>
+
+									</ul>
+								</nav>
+
+
+
 						</div>
 					</div>
 
