update hyperlinks and colors

--- a/experience.html
+++ b/experience.html
@@ -10,6 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			body {
+				background-color: black;
+				color: whitesmoke
+			}
+
+			#sidebar {
+        background-color: black; 
+				color: white
+      }
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -23,25 +34,25 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"> </a>
-									<ul class="icons">
+									<!-- <ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> 
+									</ul> -->
 								</header>
 
 							<!-- Content -->
 							<section>
 						<header class="main">
-										<h1>My Experience</h1>
+										<h1 style="color: whitesmoke">My Experience</h1>
 						</header>
 
 								<!-- Content -->
-									<h2 id="content">Cornell University – Undergraduate Blockchain Research Assistant | Ithaca, NY <br>	   
+									<h2 id="content" style="color: whitesmoke">Cornell University – Undergraduate Blockchain Research Assistant | Ithaca, NY <br>	   
 									March 2024 – May 2024</h2>
-									<p style="margin-left:5%; color:black;">
+									<p style="margin-left:5%; color:whitesmoke;">
 		•	Collaborated with a team of 2 to investigate how consensus protocols and modular architecture of IBM Hyperledger Fabric help the blockchain framework 
 				surveil the consistency of product attributes and labor conditions across supply chains 
 									<br> 
@@ -52,10 +63,10 @@
 				stakeholders, convert asset types, change asset properties, and create new assets 
 								  </p>
 
-									<h2 id="content">Extern – IgniteXL Remote Extern | Virtual<br>						       
+									<h2 id="content" style="color: whitesmoke">Extern – IgniteXL Remote Extern | Virtual<br>						       
 									May 2024 – July 2024	 </h2>
 									<!-- <pre style="font-family:verdana"> -->
-									<p style="margin-left:5%; color:black;">
+									<p style="margin-left:5%; color:whitesmoke;">
 		•	Conducted in-depth research using platforms like Crunchbase and ZoomInfo to gather data and insights on the industry and performance of 50+ companies, such as 
 				compound annual growth rate, funding stages, and regulatory risks
 									<br>
@@ -65,9 +76,9 @@
 				to provide venture capital experts with a prospective investment   
 								  </p>
 
-									<h2 id="content">National Institute of Standards and Technology – SHIP Intern | Gaithersburg, MD<br>                                    
+									<h2 id="content" style="color: whitesmoke">National Institute of Standards and Technology – SHIP Intern | Gaithersburg, MD<br>                                    
 									June 2022 – August 2022  </h2>
-									<p style="margin-left:5%; color:black;">
+									<p style="margin-left:5%; color:whitesmoke;">
 		•	Updated atomic spectra databases for NIST (National Institute of Standards and Technology) for 7 hours daily by transferring 400+ pages of orbital data to 
 				computer-readable formats using Microsoft Excel and Adobe Spark
 									<br>
@@ -77,9 +88,9 @@
 		•	Retrieved reference material for data compilers and presented the results to the NIST panel of 10 employers 
 									</p>
 									
-									<h2 id="content">George Mason University – Data Science Intern | Fairfax, VA <br>	                            
+									<h2 id="content" style="color: whitesmoke">George Mason University – Data Science Intern | Fairfax, VA <br>	                            
 									June 2021 – February 2022 </h2>
-									<p style="margin-left:5%; color:black;">
+									<p style="margin-left:5%; color:whitesmoke;">
 		•	Collaborated with a team of 3 members to analyze the correlations between certain keywords and fake websites by programming Python algorithms utilizing regular 
 				expressions and Word2Vec on article text to identify 300+ scams
 									<br>
@@ -96,19 +107,19 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
-									<ul>
-										<li><a href="index.html">About</a></li>
+									<ul style="color: gray">
+										<li><a href="index.html">About Me</a></li>
 										<li><a href="portfolio.html">Portfolio</a></li>
 										<li><a href="experience.html">Experience</a></li>
 										<li><a href="contact.html">Contact</a></li>
