--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			body {
+				background-color: black;
+				color: whitesmoke
+			}
+
+			#sidebar {
+        background-color: black; 
+				color: white
+      }
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -23,27 +34,27 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"> </a>
-									<ul class="icons">
+									<!-- <ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
+									</ul> -->
 								</header>
 
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Contact</h1>
+										<h1 style="color: whitesmoke">Contact</h1>
 									</header>
 
 									<!-- Content -->
-										<p>
-	<a href="https://github.com/gan0412" style="font-size:20px; margin-left:5%; color:blue; font-family: 'Times New Roman', Times, 
-	serif;"> My Github </a> <br>
-	<a href="https://www.linkedin.com/in/ganesh-rayavarapu-csxphysics" style="font-size:20px; margin-left:5%; color:blue; 
-	font-family: 'Times New Roman', Times, serif;"> LinkedIn </a>
+										<p style = "margin-left:5%; font-size:20px; font-family: 'Times New Roman', Times, serif;">
+	<a href="https://github.com/gan0412" style="font-size:20px; color:whitesmoke; font-family: 'Times New Roman', Times, 
+	serif;"> Github </a> <br>
+	<a href="https://www.linkedin.com/in/ganesh-rayavarapu-csxphysics" style="font-size:20px; color:whitesmoke;"> LinkedIn </a> <br>
+										Email: ganesh.rayavarapu@gmail.com
 										</p>
 
 
@@ -55,19 +66,19 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
-									<ul>
-										<li><a href="index.html">About</a></li>
+									<ul style="color: gray">
+										<li><a href="index.html">About Me</a></li>
 										<li><a href="portfolio.html">Portfolio</a></li>
 										<li><a href="experience.html">Experience</a></li>
 										<li><a href="contact.html">Contact</a></li>
