--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			body {
+				background-color: black;
+				color: whitesmoke
+			}
+
+			#sidebar {
+        background-color: black; 
+				color: white
+      }
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -23,18 +34,13 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"> </a>
-									<ul class="icons">
-										<a href="https://github.com/gan0412"> Github </a>
-										<a href="https://www.linkedin.com/in/ganesh-rayavarapu-csxphysics"> LinkedIn </a>
-
-									</ul>
 								</header>
 
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Ganesh
+											<h1 style="color: gray;">Hi, I’m Ganesh
 												Rayavarapu</h1>
 											<p>Aspiring data scientist and software engineer interested in applying AI and ML in economics 
 												and physics domain </p>
@@ -49,7 +55,7 @@
 											cooking shows, and science youtube channels (like Verisitarium). I also garden plants and explore my backyard forest for fun. 
 										</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="portfolio.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -66,19 +72,19 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2 style="color: gray">Menu</h2>
 									</header>
-									<ul>
-										<li><a href="index.html">About</a></li>
+									<ul style="color: gray ;">
+										<li><a href="index.html">About Me</a></li>
 										<li><a href="portfolio.html">Portfolio</a></li>
 										<li><a href="experience.html">Experience</a></li>
 										<li><a href="contact.html">Contact</a></li>
