--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			body {
+				background-color: black;
+				color: whitesmoke
+			}
+
+			#sidebar {
+        background-color: black; 
+				color: white
+      }
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -23,25 +34,25 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"> </a>
-									<ul class="icons">
+									<!-- <ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
+									</ul> -->
 								</header>
 
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>My Project Portfolio</h1>
+										<h1 style="color: whitesmoke">My Project Portfolio</h1>
 									</header>
 
 
 									<hr class="major" />
 
-									<h2>Blockchain Project</h2>
+									<h2 style="color: whitesmoke">Blockchain Project</h2>
 									<p>I recently completed my research position as a Blockchain Undergraduate Assistant. Due to my recent fascination with
 										blockchain and cryptocurrencies, I decided to try implementing a <a href="https://github.com/gan0412/Blockchain2"> basic blockchain application 
 										</a> with Python and Flask to understand how exactly blockchain works. I did use many tutorials and genAI tools to implement 
@@ -55,7 +66,7 @@
 
 									<hr class="major" />
 
-									<h2>Masterchef Machine Learning Project</h2>
+									<h2 style="color: whitesmoke">Masterchef Machine Learning Project</h2>
 									<p>After taking a course on machine learning, I was eager to start applying my skills. Since I was a very avid addict to cooking shows,
 										I decided to apply what I have learnt to Masterchef, a reality TV show I regularly watch. I wanted to predict the probability of previous 
 										contestants making the show for the current season, so I used logistic regression and gradient descent to construct my prediction model.
@@ -74,19 +85,19 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
-									<ul>
-										<li><a href="index.html">About</a></li>
+									<ul style="color: gray">
+										<li><a href="index.html">About Me</a></li>
 										<li><a href="portfolio.html">Portfolio</a></li>
 										<li><a href="experience.html">Experience</a></li>
 										<li><a href="contact.html">Contact</a></li>
