--- a/experience.html
+++ b/experience.html
@@ -50,20 +50,29 @@
 						</header>
 
 								<!-- Content -->
-									<h2 id="content" style="color: whitesmoke">Cornell University – Undergraduate Blockchain Research Assistant | Ithaca, NY <br>	   
-									March 2024 – May 2024</h2>
+
+									<h2 id="content" style="color: whitesmoke">Cornell Cup Robotics – Software Engineer | Ithaca, NY <br>	   
+									September 2024 – Present</h2>
 									<p style="margin-left:5%; color:whitesmoke;">
-		•	Collaborated with a team of 2 to investigate how consensus protocols and modular architecture of IBM Hyperledger Fabric help the blockchain framework 
-				surveil the consistency of product attributes and labor conditions across supply chains 
+		•	Architecting conversational AI system using OpenAI's text-to-speech API and WSL terminal to incorporate into C1C0 robotic lab assistant
+		
 									<br> 
-		•	Programmed and deployed Hyperledger fabric smart contracts for 7+ hours per week on Visual Studio using Golang and Docker to promote the transparency of 
-				cotton supply chains
-									<br> 
-		•	Documented and coded 7 smart contract functions and 10 different cotton asset types to enable 6 stakeholders of the cotton supply chain to transfer assets between 
-				stakeholders, convert asset types, change asset properties, and create new assets 
+		•	Implementing command classification engine using cosine similarity algorithms, pandas, and NumPy vectorization to categorize different user audio commands 
+		and generate context-based responses
+
 								  </p>
 
-									<h2 id="content" style="color: whitesmoke">Extern – IgniteXL Remote Extern | Virtual<br>						       
+									<h2 id="content" style="color: whitesmoke">Cornell University – Blockchain Engineer Intern | Ithaca, NY <br>	   
+									March 2024 – May 2024</h2>
+									<p style="margin-left:5%; color:whitesmoke;">
+		•	Collaborated with 2 members to implement IBM Hyperledger Fabric consensus protocols and modular architecture for cotton supply chain surveillance and transparency 
+									<br> 
+		•	Developed smart contracts 7+ hours a week using Go and Docker to automate stakeholder transactions on the supply chain
+									<br> 
+		•	Built 7 functions and 10 cotton asset types with Go, enabling 6 stakeholders to transfer and modify supply chain assets
+								  </p>
+
+									<h2 id="content" style="color: whitesmoke">Extern – IgniteXL Venture Capital Extern | Virtual<br>						       
 									May 2024 – July 2024	 </h2>
 									<!-- <pre style="font-family:verdana"> -->
 									<p style="margin-left:5%; color:whitesmoke;">
@@ -76,26 +85,22 @@
 				to provide venture capital experts with a prospective investment   
 								  </p>
 
-									<h2 id="content" style="color: whitesmoke">National Institute of Standards and Technology – SHIP Intern | Gaithersburg, MD<br>                                    
+									<h2 id="content" style="color: whitesmoke">National Institute of Standards and Technology – Data Science Intern | Gaithersburg, MD<br>                                    
 									June 2022 – August 2022  </h2>
 									<p style="margin-left:5%; color:whitesmoke;">
-		•	Updated atomic spectra databases for NIST (National Institute of Standards and Technology) for 7 hours daily by transferring 400+ pages of orbital data to 
-				computer-readable formats using Microsoft Excel and Adobe Spark
+		•	Processed 400+ pages of atomic spectra data into computer-readable formats for NIST databases via Excel and Adobe Spark 
 									<br>
-		•	Maintained consistency of the data in the spreadsheets by formatting data tables and removing erroneous data entries, enabling them to be utilized for future NASA 
-				missions and other sponsored projects
+		•	Standardized spreadsheet data formatting and removed errors to make it usable for NASA missions and sponsored projects 
 									<br>
-		•	Retrieved reference material for data compilers and presented the results to the NIST panel of 10 employers 
+		•	Gathered reference materials from data compilers and presented findings to a 10-member NIST employer panel 
 									</p>
 									
-									<h2 id="content" style="color: whitesmoke">George Mason University – Data Science Intern | Fairfax, VA <br>	                            
+									<h2 id="content" style="color: whitesmoke">George Mason University – Data Science Research Intern | Fairfax, VA <br>	                            
 									June 2021 – February 2022 </h2>
 									<p style="margin-left:5%; color:whitesmoke;">
-		•	Collaborated with a team of 3 members to analyze the correlations between certain keywords and fake websites by programming Python algorithms utilizing regular 
-				expressions and Word2Vec on article text to identify 300+ scams
+		•	Developed Python algorithms using regex and Word2Vec to analyze keyword-scam website correlations on 300+ scams 
 									<br>
-		•	Compiled data from 500+ COVID-19 scam websites via cross-referencing search engine reports, facilitated the training of supervised data science models, enhancing 
-				their accuracy in predicting the legitimacy of websites		
+		•	Trained supervised prediction models to identify scams with at least 98% accuracy by using 10000+ labeled data points 
 									</p>
 
 
