--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
 										<header>
 											<h1 style="color: gray;">Hi, I’m Ganesh
 												Rayavarapu</h1>
-											<p>Aspiring data scientist and software engineer interested in applying AI and ML in economics 
-												and physics domain </p>
+											<p>Aspiring software engineer interested in applying AI and problem solving in fields like physics, energy,
+												economics, robotics, and blockchain. </p>
 										</header>
-										<p>I am a currently a college sophomore at Cornell University studying computer science. My interests are primarily in AI, ML, 
+										<p>I am a currently a college sophomore at Cornell University studying computer science. I am also a software engineer for Cornell Cup 
+											Robotics where I am working on developing a conversational chatbot for C1C0 - robotic lab assistant. My interests are primarily in AI, robotics, 
 											and blockchain. I also have minor interests in economics and physics. I have experience with Python, Java, SQL, HTML/CSS, Golang,
-											and C++. I have also used machine learning related libraries like pytorch, numpy, Word2Vec, and pandas. I love to prompt engineer
-											and modify genAI models and APIs to accomplish personalized tasks and increase productivity. 
+											Node.js, and React.js. I have also used machine learning related libraries like pytorch, numpy, Word2Vec, and pandas. I love to prompt 
+											engineer and modify genAI models and APIs to accomplish specialized tasks and increase productivity. 
 										</p>
 
 										<p>Aside from coding, I love investing in stocks and learning about cryptocurrencies. I also love to binge watch crime TV shows,
-											cooking shows, and science youtube channels (like Verisitarium). I also garden plants and explore my backyard forest for fun. 
+											cooking shows, and science youtube channels (like Verisitarium). I also garden plants, explore my backyard forest, and practice
+											boxing for fun. 
 										</p>
 										<ul class="actions">
 											<li><a href="portfolio.html" class="button big">Learn More</a></li>
