--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,19 @@
 
 									<hr class="major" />
 
+									<h2 style="color: whitesmoke">Inventory Tracker</h2>
+									<p>I was inspired to build an inventory tracker after seeing a mobile robot scan and surveil pantry 
+										items in Costco. Therefore, I decided to make a basic application in which users can add and remove 
+										items from a list. I also allowed them to include quantities of each individual item on the list. 
+										I was able to get a lot of experience with Node.js, React.js, and web design as I mostly worked with
+										backend programming languages. The hardest parts were incorporating buttons and other components that
+										the user interacts with, especially when the user gives unusual commands. For example, when a user adds 
+										the same item twice, I needed to ensure that the initial item's quantity increases rather than adding the 
+										same item again. 
+
+										To improve the app, I am planning to add a feature that allows translation to different languages. 
+									</p>
+
 									<h2 style="color: whitesmoke">Blockchain Project</h2>
 									<p>I recently completed my research position as a Blockchain Undergraduate Assistant. Due to my recent fascination with
 										blockchain and cryptocurrencies, I decided to try implementing a <a href="https://github.com/gan0412/Blockchain2"> basic blockchain application 
@@ -61,7 +74,8 @@
 										gained some new habits along the way, like developing modular code and writing docstrings. 
 
 										Fun fact: I presented my application to two employers at a data analytics company, and they provided feedback that I 
-										incorporated accordingly. 
+										incorporated accordingly. Based on the feedback, I mainly formatted my documentation and organized my code into multiple files 
+										- frontend, backend, server, etc. 
 									</p>
 
 									<hr class="major" />
@@ -70,9 +84,9 @@
 									<p>After taking a course on machine learning, I was eager to start applying my skills. Since I was a very avid addict to cooking shows,
 										I decided to apply what I have learnt to Masterchef, a reality TV show I regularly watch. I wanted to predict the probability of previous 
 										contestants making the show for the current season, so I used logistic regression and gradient descent to construct my prediction model.
-										I used the ranks and previous seasons of contestants as data to train my model. I would not call it the most accurate model but I learned
-										a lot and had great fun with it. I have my model posted on my <a href="https://github.com/gan0412/Masterchef_ML_Project"> Github </a> for 
-										reference. 
+										I used the ranks and previous seasons of contestants as features for my model, and I generated at least 1000 synthetic data points as training
+										data. I would not call it the most accurate model but I learned a lot and had great fun with it. I have my model posted on my 
+										<a href="https://github.com/gan0412/Masterchef_ML_Project"> Github </a> for reference. 
 									</p>
 
 								</section>
