--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,8 @@
 										To improve the app, I am planning to add a feature that allows translation to different languages. 
 									</p>
 
+									<hr class="major" />
+
 									<h2 style="color: whitesmoke">Blockchain Project</h2>
 									<p>I recently completed my research position as a Blockchain Undergraduate Assistant. Due to my recent fascination with
 										blockchain and cryptocurrencies, I decided to try implementing a <a href="https://github.com/gan0412/Blockchain2"> basic blockchain application 
