--- a/experience.html
+++ b/experience.html
@@ -85,7 +85,10 @@
 				to provide venture capital experts with a prospective investment   
 								  </p>
 
-									<h2 id="content" style="color: whitesmoke">NIST – Data Science Intern | Gaithersburg, MD<br>                                    
+									<h2 id="content" style="color: whitesmoke">NIST – Data Science Intern | Gaithersburg, MD<br>     
+										<span class="image object">
+											<img src="images/NIST.jpg" alt="Ganesh Rayavarapu" itemprop="image" class="u-photo"/>
+										</span>                               
 									June 2022 – August 2022  </h2>
 									<p style="margin-left:5%; color:whitesmoke;">
 		•	Processed 400+ pages of atomic spectra data into computer-readable formats for NIST databases via Excel and Adobe Spark 
