--- a/experience.html
+++ b/experience.html
@@ -89,7 +89,7 @@
 									June 2022 – August 2022  </h2>
 
 									
-									<img src="images/NIST.webp" alt="Description of image">
+									<img src="images/NIST.webp" width="30" height="20">
 
 
 									<p style="margin-left:5%; color:whitesmoke;">
