--- a/experience.html
+++ b/experience.html
@@ -85,11 +85,10 @@
 				to provide venture capital experts with a prospective investment   
 								  </p>
 
-									<h2 id="content" style="color: whitesmoke">NIST – Data Science Intern | Gaithersburg, MD<br>                                  
+									<h2 id="content" style="color: whitesmoke">NIST – Data Science Intern | Gaithersburg, MD<br>            									<img src="images/NIST.webp" width="90" height="60">                        
 									June 2022 – August 2022  </h2>
 
 									
-									<img src="images/NIST.webp" width="30" height="20">
 
 
 									<p style="margin-left:5%; color:whitesmoke;">
