--- a/experience.html
+++ b/experience.html
@@ -85,8 +85,8 @@
 				to provide venture capital experts with a prospective investment   
 								  </p>
 
-									<h2 id="content" style="color: whitesmoke">NIST – Data Science Intern | Gaithersburg, MD<br>            									<img src="images/NIST.webp" width="90" height="60">                        
-									June 2022 – August 2022  </h2>
+									<h2 id="content" style="color: whitesmoke">NIST – Data Science Intern | Gaithersburg, MD                       <img src="images/NIST.webp" width="90" height="60"><br>            									                        
+									June 2022 – August 2022  </h2>																
 
 									
 
